syntax = "proto3";
package user;
option go_package = "pb/";
import "google/protobuf/empty.proto";

service UserService {
    rpc GetAllUser(google.protobuf.Empty) returns (UserList) {}
    rpc Register(User) returns (User) {}
}

message User {
    string name = 1;
    string address = 2;
    string phone = 3;
    string email = 4;
}

message UserList {
    repeated User users = 1;
}